@@ -101,6 +101,7 @@ biorecycling-plant=Biorecycling plant
 rubia-sniper-turret=Longer range ammo turret
 rci-rocketizer=Place adjacent to a [entity=rocket-silo]. Any items inserted into this will be transferred to the rocket's cargo. This allows materials used to make rocket parts (such as [item=craptonite-frame]) to be exported without [entity=logistic-robot].
 
+craptonite-wall=Extremely durable walls that can block the movement of [entity=medium-trashsteroid].
 medium-trashsteroid=Garbage thrown by the wind at high velocity. Its health scales with your gun technology levels, but higher damage ranks are still quite beneficial for you. Trashsteroids have a small chance to land a critical hit.
 
 
@@ -270,7 +271,7 @@ rubia-postgame-biorecycle-part1=Only a true trash tyrant like you can appreciate
 rubia-long-bulk-inserter=Outfit long-handed inserters with a sturdy craptonite frame that can handle the massive torque of rapidly swinging with large amounts of items.
 rubia-long-stack-inserter=Rubia's crown jewel. Using a durable craptonite frame, a heavy uranium base, and flexible carbon fiber grips, this stack inserter can rapidly drop stacks of items farther away. Slower than a normal stack inserter.
 
-craptonite-wall=Use craptonite reinforcement to make the most durable defensive structures in the galaxy.
+craptonite-wall=Use craptonite reinforcement to make the most durable defensive structures in the galaxy. These walls can stop [entity=medium-trashsteroid] from crossing them.
 craptonite-axe=Replace your crappy steel axe with a durable craptonite axe, capable of mining much more efficiently. Unlocks access to various craptonite accessories.
 
 rubia-efficiency-module4=Attaching a craptalytic converter to your machine will enrage the neutrons of any pollution particles passing through, causing them to explode and emit the sweet-smelling aroma of craptonite.
@@ -438,6 +439,7 @@ rubia-shield-warning-convo-part4=(Loup&Snoop) no no no. he'll turn back. just lo
 
 [version-change-warnings]
 rubia-trashsteroid-health-scaling=(Loup&Snoop / Rubia) So... don't be mad, but I fixed a bug that made trashsteroid health not scale as much as it needed when you got high physical damage technology... A totally understandable mistake! But on the bright side, I also added difficulty settings under Mod Settings => Map Settings. If your base starts suddenly exploding, you should use that. Good luck!
+rubia-craptonite-wall=(Loup&Snoop / Rubia) Good news! Craptonite walls were buffed in a recent update. See details in their technology, or in Tips and Tricks.
 
 [tips-and-tricks-item-name]
 rubia-briefing=Rubia briefing
@@ -446,5 +448,5 @@ rubia-wind-tips=Rubia wind mechanics
 
 [tips-and-tricks-item-description]
 rubia-briefing=[img=utility/warning_icon][img=utility/warning_icon][color=250,250,0][font=default-semibold]WARNING![/font][/color][img=utility/warning_icon][img=utility/warning_icon]  Cargo pods and rockets carrying people/cargo will suffer SEVERE impact damage upon entering/exiting Rubian airspace. Damage-free transport requires [technology=rubia-project-trashdragon]/[technology=planetslib-rubia-cargo-drops]. Without them, [color=250,250,0][font=default-semibold]YOU WILL DIE UPON LANDING[/font][/color] unless you can withstand a large amount of impact damage.\n\n[planet=rubia] is a windy trash planet with hurricane-force winds. The wind restricts the orientation of several entities, and will constantly barrage the surface with trashsteroids. The planet is covered in resource-rich scrap, which can be converted to useful materials using microbes in a [entity=biorecycling-plant]. You'll receive more details upon arrival.\n\nHint: Researching [technology=planet-discovery-rubia] means you can already craft everything you need.
-rubia-trashsteroid-tips=Trashsteroids are ever-present threats on Rubia:\n   • [entity=medium-trashsteroid] will bombard your base, and require turrets to defend against.\n   • They deal damage with a small chance to land a critical hit, which is rolled once per trashsteroid.\n   • [entity=cargo-pod] will suffer SEVERE impact damage upon entry, without [technology=planetslib-rubia-cargo-drops].\n   • [entity=rocket-silo] cannot safely launch rockets without [technology=rubia-project-trashdragon].\n   • [entity=garbo-grabber] can only collect [item=craptonite-chunk] from trashsteroids destroyed by physical/explosive damage within their range.\n   • [technology=physical-projectile-damage-1]/[technology=weapon-shooting-speed-1]/etc will make [entity=medium-trashsteroid] bulkier. Higher tech levels still give you a substantial advantage--just not as massive of an advantage as you would expect.\n\n[font=default-semibold]Megabasing/UPS Tips:[/font]\n   • Not looking at Rubia will greatly lower Rubia's UPS cost, as a large fraction of time is spent on rendering trashsteroids.\n   • Do not fear exploring large swaths of Rubia's surface. I spent weeks optimizing trashsteroids to avoid spending CPU time on unnecessary chunks of the map.
-rubia-wind-tips=Eastward winds will have the following effects:\n   • [entity=inserter] and [entity=splitter] can only move items to the right.\n   • [entity=transport-belt], [entity=underground-belt], and [entity=electric-mining-drill] cannot move items to the left.\n   • [entity=logistic-robot] cannot safely navigate to [entity=requester-chest], [entity=buffer-chest], [entity=active-provider-chest], or [entity=rocket-silo].\n   • [entity=locomotive], [entity=cargo-wagon], [entity=recycler], and related cannot withstand the wind.\n   • Some entities are immune to bombardment, such as [item=rail], [entity=rail-signal], [entity=rubia-armored-locomotive], related entities, and any entity made with [item=craptonite-frame].\n   • [entity=rubia-wind-turbine] will generate power.
+rubia-trashsteroid-tips=Trashsteroids are ever-present threats on Rubia:\n   • [entity=medium-trashsteroid] will bombard your base, and require turrets to defend against.\n   • They deal damage with a small chance to land a critical hit, which is rolled once per trashsteroid.\n   • [entity=cargo-pod] will suffer SEVERE impact damage upon entry, without [technology=planetslib-rubia-cargo-drops].\n   • [entity=rocket-silo] cannot safely launch rockets without [technology=rubia-project-trashdragon].\n   • [entity=garbo-grabber] can only collect [item=craptonite-chunk] from trashsteroids destroyed by physical/explosive damage within their range.\n   • Some entities are immune to bombardment, such as [item=rail], [entity=rail-signal], [entity=rubia-armored-locomotive], related entities, and any entity made with [item=craptonite-frame].\n   • [entity=craptonite-wall] block the movement of trashsteroids, but cannot spawn-block them nor prevent their impact radius.\n   • [technology=physical-projectile-damage-1]/[technology=weapon-shooting-speed-1]/etc will make [entity=medium-trashsteroid] bulkier. Higher tech levels still give you a substantial advantage--just not as massive of an advantage as you would expect.\n\n[font=default-semibold]Megabasing/UPS Tips:[/font]\n   • Not looking at Rubia will greatly lower Rubia's UPS cost, as a large fraction of time is spent on rendering trashsteroids.\n   • Do not fear exploring large swaths of Rubia's surface. I spent weeks optimizing trashsteroids to avoid spending CPU time on unnecessary chunks of the map.
+rubia-wind-tips=Eastward winds will have the following effects:\n   • [entity=inserter] and [entity=splitter] can only move items to the right.\n   • [entity=transport-belt], [entity=underground-belt], and [entity=electric-mining-drill] cannot move items to the left.\n   • [entity=logistic-robot] cannot safely navigate to [entity=requester-chest], [entity=buffer-chest], [entity=active-provider-chest], or [entity=rocket-silo].\n   • [entity=locomotive], [entity=cargo-wagon], [entity=recycler], and related cannot withstand the wind.\n   • [entity=rubia-wind-turbine] will generate power.
